Fixing the URL to URI to avoid the deprecation